make post request and get info

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,32 @@
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel='stylesheet' type='text/css' href='/stylesheet/style.css')
     title Event RSVP
   body
     h1 Event RSVP Form
+    form(method="POST" action="/reply")
+      fieldset
+        legend="Your Contact Info"
+        label(for="name")="Name"
+        input(type="text" name="name" required)
+        label(for="email")="Email"
+        input(type="email" name="email" required)
+        label(for="attending")="Attending"
+        input(type="radio" name="attending" value="yes")
+        | I'll be there!
+        input(type="radio" name="attending" value="no")
+        | I can't make it
+        |
+        label(for="guests")="Number of Guests"
+        select(name="guests")
+          option(value=1) 1
+          option(value=2) 2
+          option(value=3) 3
+          option(value=4) 4
+          option(value=5) 5
+          option(value=6) 6
+          option(value=7) 7
+          option(value=8) 8
+        button(type="submit") Submit
