--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -1,3 +1,45 @@
+:root {
+  --color-light: #e8ded2;
+  --color-content: #a3d2ca;
+  --color-text: #5eaaa8;
+  --color-dark: #056676;
+}
+
 * {
   box-sizing: border-box;
+  font-family: "Oranienbaum", serif;
+  font-size: medium;
+}
+
+html,
+body {
+  background-color: var(--color-light) !important;
+}
+
+input,
+select {
+  background-color: var(--color-light) !important;
+}
+
+form {
+  background-color: var(--color-content) !important;
+  border: 0.1rem solid var(--color-text);
+  border-radius: 10px;
+  box-shadow: 10px 20px var(--color-dark);
+}
+
+h1 {
+  font-family: "Playfair Display SC", serif;
+  padding: 2rem 0;
+}
+
+button {
+  background-color: var(--color-dark) !important;
+  color: var(--color-light) !important;
+}
+
+button:hover {
+  background-color: var(--color-light) !important;
+  border: 1px solid var(--color-dark);
+  color: var(--color-dark) !important;
 }
