--- a/views/layouts/header.pug
+++ b/views/layouts/header.pug
@@ -4,7 +4,7 @@ head
     meta(theme-color="#1b262c")
     link(rel='stylesheet' type='text/css' href='/stylesheet/style.css')
     // Google Font
-    link(href="https://fonts.googleapis.com/css2?family=Oranienbaum&family=Playfair+Display+SC:wght@900&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Slab:wght@600&display=swap" rel="stylesheet")
     // Bootstrap CSS
     link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous")
     title Event RSVP
