update style for guests view

--- a/views/index.pug
+++ b/views/index.pug
@@ -23,7 +23,7 @@ html(lang="en")
               input(type="radio" name="attending" value="no" id="r2" required).form-check-input
               label(for="r2").form-check-label I can't make it
       div.form-group.row
-        label(for="guests").col-sm-4.col-form-label How many guests are you bringing? (Include yourself)
+        label(for="guests").col-sm-4.col-form-label Number of guests (Include yourself)
         div.col-sm-1
           select(name="guests" id="numOfGuests").form-control
             option(value=1) 1
