--- a/views/guests.pug
+++ b/views/guests.pug
@@ -1,24 +1,23 @@
 html(lang="en")
   include layouts/header
   body.container-sm
-    h1 List of guests
+    .d-flex
+      h1.mr-auto List of guests
+      a(href="/").mb-auto.btn.btn-outline-primary &larr; New RSVP
     - var attending = users.filter(user => user.attending === true)
     - var notAttending = users.filter(user => user.attending === false)
     .row
       .col-sm.m-3.p-3#attending
         h2 Attending
         each user in attending
-          ul
+          ul.list-unstyled.pl-3
             li= "Name: " + user.name
             li= "Email: " + user.email
-            li= "Attending? " + user.attending
             li= "# of guests: " + user.guests
       .col-sm.m-3.p-3#notattending
         h2 Not attending
         each user in notAttending
-          ul
+          ul.list-unstyled.pl-3
             li= "Name: " + user.name
             li= "Email: " + user.email
-            li= "Attending? " + user.attending
-            li= "# of guests: " + user.guests
     include layouts/bootstrap-js
